Trello #334 Discourse theme - fixes part: prepare fix for missing padding around group name on Group profile page (depends on https://github.com/discourse/discourse/pull/2392 )

--- a/assets/stylesheets/desktop/user.scss
+++ b/assets/stylesheets/desktop/user.scss
@@ -99,6 +99,16 @@
       border-top: 1px solid $gray-lighter-SP;
       background-color: $gray-bg-SP;
     }
+
+    &.group {
+      .details {
+        padding: 20px;
+
+        &:after {
+          display: none;
+        }
+      }
+    }
   }
 
   .user-stream {
